tons of DTOs and implement optimizer
